...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/cardView_picture"
        tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry." />

    <FrameLayout
        android:id="@+id/frameLayout_media_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
...
